service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-frontend-test
  namespace: go-frontend-test
  labels:
    app: go-frontend-test
    backstage.io/kubernetes-id: go-frontend-test
spec:
  selector:
    app: go-frontend-test
  ports:
    - name: http
      port: 8080
      targetPort: 8080
